# goctl-rs

./: .gitignore  Cargo.toml  README.md
src/: common.rs  error.rs  lib.rs  parser.rs  service.rs  struct_ref.rs  token.rs
src/cli/: error.rs  mod.rs  oli.rs
src/openapi/: swagger.rs
tests/: example.api  openapi.json
